Youtube Video Links Changes.

--- a/media.html
+++ b/media.html
@@ -19,9 +19,7 @@
 
 <style>
     @media screen and (max-width: 768px) {
-        .video {
-            min-width: 360px;
-        }
+        .video {}
     }
 </style>
 
@@ -106,7 +104,8 @@
                                         <div class="swiper-slide">
                                             <div class="img-mask">
                                                 <div class="section-wrap-image">
-                                                    <iframe width="100%" height="100%" class="video" src="https://www.youtube.com/embed/3KhX20ozC9o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                    <iframe width="100%" height="100%" class="video" src="https://www.youtube.com/embed/VzhgygKmQH8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
                                                 </div>
                                             </div>
                                             <a class="showcase-link-project" data-type="page-transition" href="Angular.html"></a>
@@ -118,7 +117,7 @@
                                         <div class="swiper-slide">
                                             <div class="img-mask">
                                                 <div class="section-wrap-image">
-                                                    <iframe width="100%" height="100%" class="video" src="https://www.youtube.com/embed/MVOy7KicoL8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                    <iframe width="100%" height="100%" class="video" src="https://www.youtube-nocookie.com/embed/4H7Uo41s9cY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                                 </div>
                                             </div>
                                             <a class="showcase-link-project" data-type="page-transition" href="Angular.html"></a>
